# memcrate

./: .gitignore  Cargo.toml  LICENSE  LICENSE-spec  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: cli.md  overview.md  skills.md  vault-structure.md  verbs.md
reference-vault/: README.md
reference-vault/Core/Context/: Current State.md  Profile.md  Projects.md
reference-vault/Core/Sessions/: _README.md
skills/claude-code/load/: SKILL.md
skills/claude-code/pin/: SKILL.md
skills/claude-code/save/: SKILL.md
src/: main.rs
